# S-Language

./: CMakeLists.txt  main.c  readme.md  test.ss
lib/BinarySearchStringTree/: binary_search_string_tree.c  binary_search_string_tree.h
scanner/: flood.c  keywords.inc  scanner.c  scanner.h  symbols.inc  symbols_func.c
utils/: debug.h  utils.c  utils.h
